@@ -26,6 +26,7 @@ import com.avaje.ebean.EbeanServer;
 
 import name.richardson.james.bukkit.alias.persistence.InetAddressRecord;
 import name.richardson.james.bukkit.alias.persistence.PlayerNameRecord;
+import name.richardson.james.bukkit.alias.query.CheckCommand;
 import name.richardson.james.bukkit.utilities.command.CommandManager;
 import name.richardson.james.bukkit.utilities.configuration.DatabaseConfiguration;
 import name.richardson.james.bukkit.utilities.persistence.SQLStorage;
@@ -111,7 +112,7 @@ public class Alias extends AbstractPlugin {
   protected void registerCommands() {
     final CommandManager manager = new CommandManager(this);
     this.getCommand("as").setExecutor(manager);
-    // manager.addCommand(new CheckCommand(this));
+    manager.addCommand(new CheckCommand(this));
     // manager.addCommand(new DeleteCommand(this));
   }
 
@@ -120,7 +121,7 @@ public class Alias extends AbstractPlugin {
    */
   @Override
   protected void registerListeners() {
-    this.getServer().getPluginManager().registerEvents(new PlayerListener(this), this);
+    new PlayerListener(this);
   }
 
 }
