@@ -1,32 +1,21 @@
 # Plugin messages
-plugin-description: ${project.description}
+alias.description: Associate player names to IP addresses.
 
-no-names: No names
-no-name no name
-one-name: one name
-many-names: {0,number} names
+aliashandler.associate-player: Associating {1} with {0}. 
 
-## Check Command
 checkcommand.name: check
 checkcommand.description: Check the database for associated records.
 checkcommand.permission-description: Allow users to check the database for associated records.
 checkcommand.usage: <player|address>
-checkcommand.permission-player-description: Allow users to search by player name.
-checkcommand.permission-address-description: Allow users to search by IP address.
-checkcommand.no-arguments: You must specify a player name or an address!
-checkcommand.player-search-hint: If the player is online, you can type part of the name.
-checkcommand.specify-valid-address: You must specify a valid IP address!
-checkcommand.address-search-hint: Can be either a hostname or an actual address.
-checkcommand.cannot-search-by-player: You may not search by player name.
-checkcommand.cannot-search-by-address You may not search by IP address.
-checkcommand.header: &AQUA{1} &LIGHT_PURPLEhas used &AQUA{0}.
-checkcommand.no-names: No names
-checkcommand.no-name no name
+checkcommand.no-names: no names
 checkcommand.one-name: one name
 checkcommand.many-names: {0,number} names
-checkcommand.list-item: &LIGHT_PURPLE- {0}: &GREEN{1}. 
-checkcommand.player-is-not-banned: &YELLOW{0} &GREENis not banned.
-checkcommand.used: {0} checked an alias: {1}.
+checkcommand.no-names-found: &YELLOWNo record available.
+checkcommand.header: &AQUA{1} &LIGHT_PURPLEhas used &AQUA{0}.
+checkcommand.list-item: &YELLOW- {0}: &GREEN{1} 
+checkcommand.used: {0} has checked for alias of {1}.
+
+
 
 ## Delete Command
 deletecommand.name: delete
